# insigthbot

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/chatbot/: chatbot.py
static/: index.html
word_files/: 2017-Abbas-Cellular and molecular immunology E-book.docx
