[tool.poetry]
name = "insightbot"
version = "0.1.0"
description = "A dynamic chatbot web app built with FastAPI"
authors = ["Amir Molavi <amir.molavi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
openai = "^0.28"
python-docx = "^1.1.2"       # PostgreSQL driver
sqlalchemy = "^1.4.0" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
