[tool.poetry]
name = "insightbot"
version = "0.1.0"
description = "A dynamic chatbot web app built with FastAPI"
authors = ["Amir Molavi <amir.molavi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.115.4"
uvicorn = "~0.32.0"
openai = "~0.28"
python-docx = "~1.1.2"       # PostgreSQL driver
sqlalchemy = "~1.4.0" 
htmx = "~0.0.0"
docx = "~0.2.4"
isort = "~5.13.2"
scikit-learn = "~1.5.2"
ordered-set = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
