[tool.poetry]
name = "insightbot"
version = "0.1.0"
description = "A dynamic chatbot web app built with FastAPI"
authors = ["Amir Molavi <amir.molavi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.115.4"
uvicorn = "~0.32.0"
openai = "~0.28"
python-docx = "~1.1.2"

ordered-set = "^4.1.0"
sentence-transformers = "~3.3.0"
chromadb = "~0.5.18"

[tool.poetry.group.dev.dependencies]

# Linting and formatting
isort = "~5.13.2"
ruff = "~0.7.2"
black = "~24.10.0"
pre-commit = "~4.0.1"

# Test
pytest = "~8.1"
coverage = { version = "~7.4", extras = ["toml"] }
pytest-cov = "~5.0"
nox_poetry = "^1.0.2"

[tool.ruff]
src = ["app"]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff.lint.per-file-ignores]
# Allow unused imports and star imports in __init__.py files
"__init__.py" = ["F401", "F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
